--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -13,3 +13,9 @@ shop:
   controller: App\Controller\shopController::shop
   requirements:
     _locale: "%app.supported_locales%"
+
+contact:
+  path: /contact
+  controller: App\Controller\contactController::contact
+  requirements:
+    _locale: "%app.supported_locales%"
