--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,9 +36,9 @@ security:
   # Note: Only the *first* access control that matches will be used
   # TODO: Définir les bonnes routes
   access_control:
-    - { path: ^/(%app.supported_locales%)/admin, roles: ROLE_ADMIN }
-    - { path: ^/(%app.supported_locales%)/user/, roles: ROLE_CLIENT }
-    - { path: ^/(%app.supported_locales%)/user/orders, roles: ROLE_CLIENT }
+    - { path: ^/admin, roles: ROLE_ADMIN } # (%app.supported_locales%)
+    - { path: ^/user, roles: ROLE_CLIENT }
+    - { path: ^/user/orders, roles: ROLE_CLIENT }
 
 when@test:
   security:
