--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@hotwired/stimulus": "^3.0.0",
+    "@prettier/plugin-php": "0.14.3",
     "@symfony/stimulus-bridge": "^3.0.0",
     "@symfony/webpack-encore": "^1.8.1",
     "core-js": "^3.0.0",
